<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_main"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:src="@drawable/bang_v"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:text="@string/txt_date"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile_main"
            app:layout_constraintStart_toEndOf="@+id/iv_profile_main"
            app:layout_constraintTop_toTopOf="@+id/iv_profile_main" />

        <ImageView
            android:id="@+id/iv_profile_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/image"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.985"
            app:layout_constraintStart_toEndOf="@+id/iv_profile_main"
            app:layout_constraintTop_toTopOf="@+id/iv_profile_main"
            app:layout_constraintVertical_bias="0.526"
            app:srcCompat="@drawable/ic_profile" />

        <TextView
            android:id="@+id/tv_breaking_news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_24dp"
            android:text="@string/breaking_news"
            android:textColor="@color/black"
            android:textSize="@dimen/_36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.099"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_profile_main" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_breaking_newa"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_breaking_news">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_breaking_item"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    app:cardCornerRadius="20dp">

                    <ImageView
                        android:id="@+id/iv_breaking_iteam"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/image"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/foto_dummy_pro" />
                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_title_breaking_item"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/cv_breaking_item"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/dummy_title"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/tv_author_breakingItem"
                    android:layout_width="@dimen/_30dp"
                    android:layout_height="@dimen/_30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_16dp"
                    android:src="@drawable/avatar" />

                <TextView
                    android:id="@+id/tv_author_breaking_news"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/author_dummy"
                    android:layout_marginStart="@dimen/_8dp"
                    android:layout_below="@id/tv_title_breaking_item"
                    android:layout_alignParentBottom="true"
                    android:layout_toEndOf="@id/tv_author_breakingItem"
                    android:layout_marginLeft="@dimen/_8dp"
                    android:layout_toRightOf="@id/tv_author_breakingItem"
                    android:layout_marginTop="@dimen/_20dp"/>

                <TextView
                    android:id="@+id/tv_date_release_breaking_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_date"
                    android:layout_below="@id/tv_title_breaking_item"
                    android:layout_toEndOf="@id/tv_author_breaking_news"
                    android:layout_marginTop="@dimen/_20dp"
                    android:gravity="end"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_toRightOf="@id/tv_author_breaking_news"
                    android:layout_alignParentRight="true" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <HorizontalScrollView
            android:id="@+id/hs_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv_breaking_newa">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_information"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:text="@string/information"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_magazine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_weight="1"
                    android:text="@string/magazine"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_media"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_weight="1"
                    android:text="@string/media"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_bussines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_weight="1"
                    android:text="@string/bussines"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_international"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_weight="1"
                    android:text="@string/international"
                    android:textSize="18sp" />
            </LinearLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hs_main"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_news" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>